# statsmodels-tut

./: README.md  introduction.py  pyproject.toml  variables.py
